--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -33,5 +33,5 @@ clean-targets:         # directories to be removed by `dbt clean`
 # files using the `{{ config(...) }}` macro.
 models:
   dbtproject:
-    #staging:
-    #  +materialized: view
+    staging:
+      +materialized: view
